--- a/src/sass/page/systempage.scss
+++ b/src/sass/page/systempage.scss
@@ -39,8 +39,9 @@
       border-radius: 5px;
     }
     .scrollContent {
-      width: 100%;
+      width: 99%;
       flex-grow: 1;
+      margin: 0 auto;
       margin-bottom: 1.5rem;
       padding: 1rem;
       border-radius: 1rem !important;
